# devcomposefile

./: .dockerignore  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md  build.rs  cog.toml  index.html  mise.toml  style.css  taskfile.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md  security_vulnerability_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  chore.md  docs.md  feature.md  improvement.md
.github/workflows/: back-clippy.yaml  back-dep-audit.yaml  dependency-review copy.yml  docker.yml  pages.yml  scorecards.yml
.hooks/: end-of-line.sh  whitespace-fixer.sh
assets/rules/: default-rules.json  startup-rules.json
src/: lib.rs  main.rs
src/app/: mod.rs
src/convert/: include_resolver.rs  merge.rs  mod.rs  rule_engine.rs  service_refs.rs  transform.rs  validate.rs  variables.rs
src/domain/: compose.rs  devfile.rs  git_fetch.rs  mod.rs  rules.rs
src/ui/: compose_input.rs  diagnostics.rs  git_repo_input.rs  include_files.rs  mod.rs  output.rs  rule_editor.rs  rules_panel.rs  service_refs_panel.rs  traces_panel.rs  yaml_highlight.rs
tests/: conversion_tests.rs
tests/fixtures/: compose-base.yml  compose-override.yml  expected-devfile.yml  runtime-rules.json
