[package]
name = "devcomposefile"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "DataTransfer",
    "DragEvent",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Location",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "Url",
    "UrlSearchParams",
    "Window",
] }
console_error_panic_hook = "0.1"
